<resources>
    <string name="app_name">Burpple</string>
    <string name="action_settings">Settings</string>
    <string name="heading">burpple</string>
    <string name="search_hint">Search e.g. Japanese in Orchard</string>
    <string name="see_more">See More</string>
    <string name="news_trending"><b>New &amp; Trending</b></string>
    <string name="burpple_exclusive"><b>Burpple Exclusive</b></string>
    <string name="guide_ads">Best BBQ in Town</string>
    <string name="featured">FEATURED</string>
    <string name="promotion_lower_text">Big Size Chicken Burger</string>

    <string name="lbl_logout">Logout</string>

    <string name="lbl_to_register">Register</string>
    <string name="lbl_to_login">Login</string>

    <string name="lbl_forgot_password"><u>Forgot Password?</u></string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_mobile_or_email">Mobile or Email</string>
    <string name="lbl_password">Password</string>
    <string name="new_account"><u>Create a New Account</u></string>
    <string name="lbl_or">(or)</string>
    <string name="lbl_agree_tc">I agree to <font color="#FFF">Terms</font> and <font color="#FFF">Privacy Policy</font></string>
</resources>
