<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_sky_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="Login Form"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_big_2x"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_login_user"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/user_profile" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email_or_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_user"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="@dimen/margin_large"
        android:textColorHint="@color/primary">

        <EditText
            android:id="@+id/et_email_or_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_mobile_or_email"
            android:textColorHint="@color/primary"
            android:textSize="@dimen/text_regular_3x" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email_or_phone"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:textColorHint="@color/primary">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:textColorHint="@color/primary"
            android:textSize="@dimen/text_regular_3x" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/fl_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/input_password"
        android:layout_alignRight="@id/input_password"
        android:layout_below="@id/input_password"
        android:layout_marginTop="28dp">

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-8dp"
            android:foreground="@drawable/ripple_primary"
            android:text="@string/lbl_remember_me"
            android:textColor="@color/full_white"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:clickable="true"
            android:foreground="@drawable/ripple_primary"
            android:padding="8dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_regular_2x" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_remember_me"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="8dp"
        android:background="@color/primary"
        android:foreground="@drawable/ripple_white"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/full_white"
        android:textSize="@dimen/text_regular_3x" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_login"
        android:layout_alignRight="@id/btn_login"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:foreground="@drawable/ripple_primary"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/new_account"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_register"
        android:layout_alignRight="@id/btn_register"
        android:layout_below="@id/btn_register"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/lbl_or"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_regular_2x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_register"
        android:layout_alignRight="@id/btn_register"
        android:layout_below="@id/tv_or"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:foreground="@drawable/ripple_white"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:foreground="@drawable/ripple_white"
            android:src="@drawable/twitter" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:foreground="@drawable/ripple_white"
            android:src="@drawable/googleplus" />

    </LinearLayout>


</RelativeLayout>